--- a/kontrole/kontrolBack/templates/kontrolBack/ControlChecklist.html
+++ b/kontrole/kontrolBack/templates/kontrolBack/ControlChecklist.html
@@ -1,45 +1,67 @@
 {% extends 'kontrolBack/base.html' %}
 {% load static %}
 
-
 {% block content %}
 <br><br>
-<h5><strong>Lista sprawdzająca dla kontroli {{ control.name }} </strong>(podgląd)</h5><br>
-<a href="{% url 'control_checklist_edit' pk=control.pk %}" class="btn btn-outline-success btn-sm">Edytuj</a>
-<button class="btn btn-outline-primary btn-sm toggler">
-       Pokaż komentarze 
-</button>
+<div class="row d-flex justify-content-center">
+<div class="col-md-8">
+    <h5><strong>Lista sprawdzająca dla kontroli {{ control.name }} </strong></h5>
+    <em>(nazwa listy: {{ control.checklist.name }})</em><br><br>
+    <!-- <a href="{% url 'control_checklist_edit' pk=control.pk %}" class="btn btn-outline-success btn-sm">Edytuj</a> -->
+    <button class="btn btn-outline-primary btn-sm toggler">
+           Pokaż komentarze 
+    </button><br><br>
 
+<table id="tablesorted" class="table table-bordered table-striped tablesorter">    
+    <thead>
+        <tr>
+            <th width='5%'>L.p.</th>
+            <th>Pytanie</th>
+            <th>Blok</strong></th>
+            <th width='10%'>Odpowiedź</th>
+            <th>Akcje odpowiedzi</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for q in questions %}
+        <tr>
+            <td>{{forloop.counter}}</td>
+            <td> {{ q.question_name }}</td>
+            <td>{{ q.block_name }}</td>
+            <td class="answer_field">{{ q.answer.get_content_display }}</td>
+            <td>
+                {% if q.answer.get_content_display  %}
+                <a href="{% url 'answer_edit' pk=q.answer.pk %}" class="text_primary">Edytuj</a>&nbsp;&nbsp;&nbsp;
+                <a href="{% url 'answer_delete' pk=q.answer.pk %}" class="orangetext">Usuń</a>
+                {% else %}
+                <a href="{% url 'answer_add' question_pk=q.pk %}" class="greentext">Dodaj</a>
+                {% endif %}
+            </td>
+        </tr>
+        <tr class="comment hidden">
+            <td colspan="5" class="border-bottom">Komentarz:<br>
+            <em>{% firstof q.answer.comment 'Brak uwag' %}<br></em></td>
+        </tr>
+        {% endfor %}
 
-<table>
-    <tr>
-        <td class="border-bottom"><strong>L.p.</strong></td>
-        <td class="border-bottom"><strong>Pytanie</strong></td>
-        <td class="border-bottom"><strong>Blok</strong></td>
-        <td class="border-bottom"><strong>Odpowiedź</strong></td>
-        <td class="border-bottom"><strong>Akcja</strong></td>
-    </tr>
-
-    {% for q in questions %}
-    <tr>
-        <td>{{forloop.counter}}</td>
-        <td> {{ q.question_name }}</td>
-        <td>{{ q.block_name }}</td>
-        <td class="answer_field">{{ q.answer.get_content_display }}</td>
-        <td>
-            {% if q.answer.get_content_display  %}
-            <a href="{% url 'answer_edit' pk=q.answer.pk %}" class="btn btn-outline-primary btn-sm">Edytuj</a>
-            {% else %}
-            <a href="{% url 'answer_add' question_pk=q.pk %}" class="btn btn-outline-success btn-sm">Dodaj</a>
-            {% endif %}
-        </td>
-    </tr>
-    <tr class="comment hidden">
-        <td colspan="5" class="border-bottom">Komentarz:<br>
-        <em>{% firstof q.answer.comment 'Brak uwag' %}<br></em></td>
-    </tr>
-    {% endfor %}
+    </tbody>
 </table>
+</div>
+</div>
+
 
 <script type="text/javascript" src="{% static 'kontrolBack/answerField.js' %}"></script>
-{% endblock content %}
+<script type="text/javascript" src="{% static 'kontrolBack/tablesorter.js' %}"></script>
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
