--- a/kontrole/kontrolBack/templates/kontrolBack/index.html
+++ b/kontrole/kontrolBack/templates/kontrolBack/index.html
@@ -5,7 +5,7 @@
 <div align="center" valign="middle">
     <img src="{% static 'kontrolBack/handshake.svg' %}" alt="handshake" height="300px" width="487px" />
     <p>
-    <h4>"Kontrola podstawą zaufania" - Konfucjusz</h4><br><br><br>
+    <h4>"Kontrola podstawą zaufania" - Konfucjusz</h4><br><br><br><br><br><br><br>
     <em class="sm">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></em>    
     </p>
 
