--- a/kontrolBack/templates/registration/login.html
+++ b/kontrolBack/templates/registration/login.html
@@ -4,24 +4,37 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-  <br>
-  <br>
-  <form method="post">
-    {% csrf_token %}
-    
-    <table>
-      <tr>
-        <td>{{form.username.label}}:</td><td>{{form.username}}</td>
-      </tr>
-      <tr>
-        <td>{{form.password.label}}:</td><td>{{form.password}}</td>
-      </tr>
-      <tr>
-        <td><button type="submit" class="btn btn-success">Login</button></td><td></td>
-      </tr>
+<br>
+<br>
+<form method="post">
+  {% csrf_token %}
 
-    </table>
+  <table>
+    <tr>
+      <td>{{form.username.label}}:</td>
+      <td>{{form.username}}</td>
+    </tr>
+
+    <tr>
+      <td>{{form.password.label}}:</td>
+      <td>{{form.password}}</td>
+    </tr>
+
+    <tr>
+      <td colspan="2">
+        <small><i>Użytkownicy testowi: robert, M@r@don@ / diego, M@r@don@</i></small>
+      </td>
+    </tr>
 
 
-  </form>
+
+    <tr>
+      <td><button type="submit" class="btn btn-success">Login</button></td>
+      <td></td>
+    </tr>
+
+  </table>
+
+
+</form>
 {% endblock %}
